Fix global CSS overriding text alignment in MDX components

--- a/app/global.css
+++ b/app/global.css
@@ -44,15 +44,16 @@ body {
 }
 
 /* Apply RTL text alignment to all common text elements */
-[dir="rtl"] h1,
-[dir="rtl"] h2,
-[dir="rtl"] h3,
-[dir="rtl"] h4,
-[dir="rtl"] h5,
-[dir="rtl"] h6,
-[dir="rtl"] p,
-[dir="rtl"] span,
-[dir="rtl"] div {
+/* Exclude elements inside alignment components (!text-center, !text-left, !text-right) */
+[dir="rtl"] h1:not(.!text-center *):not(.!text-left *):not(.!text-right *),
+[dir="rtl"] h2:not(.!text-center *):not(.!text-left *):not(.!text-right *),
+[dir="rtl"] h3:not(.!text-center *):not(.!text-left *):not(.!text-right *),
+[dir="rtl"] h4:not(.!text-center *):not(.!text-left *):not(.!text-right *),
+[dir="rtl"] h5:not(.!text-center *):not(.!text-left *):not(.!text-right *),
+[dir="rtl"] h6:not(.!text-center *):not(.!text-left *):not(.!text-right *),
+[dir="rtl"] p:not(.!text-center *):not(.!text-left *):not(.!text-right *),
+[dir="rtl"] span:not(.!text-center *):not(.!text-left *):not(.!text-right *),
+[dir="rtl"] div:not(.!text-center):not(.!text-left):not(.!text-right):not(.!text-center *):not(.!text-left *):not(.!text-right *) {
   text-align: right;
 }
 
